WindGroup Dev/src/objects/Operational_Budget__c.object
<CustomObject>
    <description>Created to be used in Procurement Process</description>
    <fields>
        <fullName>Budget_Category__c</fullName>
        <label>Budget Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Budget_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Budget_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Line__c</fullName>
        <label>Budget Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Budget_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Budget_Line</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <label>Budget Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opex</fullName>
                </value>
                <value>
                    <fullName>Capex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COA_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Master</label>
        <referenceTo>COA_Master__c</referenceTo>
        <relationshipLabel>Operational Budget</relationshipLabel>
        <relationshipName>Operational_Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operational Budget</relationshipLabel>
        <relationshipName>Operational_Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Budget_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <label>Operational Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Budget_Type__c</columns>
        <columns>Budget_Category__c</columns>
        <columns>Budget_Line__c</columns>
        <columns>COA_Master__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OB-{000000}</displayFormat>
        <label>Operational Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational Budget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>